<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="ga_trackingId">UA-44937153-2</string>
    <string name="Length">Length</string>
    <string name="Time">Time</string>
    <string name="kick">Kick!</string>
    <string name="track">"Track your baby's movements"</string>
    <string name="start_timer">Start timer</string>
    <string name="stop_timer">Stop timer</string>
    <string name="remove">Do you want to remove this entry?</string>
    <string name="dateformat">MM/dd/yyyy</string>
    <string name="datar">date of birth</string>
    <string name="timeb">time of birth</string>
    <string name="babybirth">Baby birth</string>
    <string name="install">Install Baby Care</string>
    <string name="welcome">Congratulations with the new baby!</string>
    <string name="welcome2">This app is designed for parents who are following the developments of their child and want to record important milestones and write about interesting moments. “Baby Care” is a convenient and useful tool for monitoring your baby’s development!</string>
    <string name="path">"Path: /mnt/sdcard/I'mPregnant/preg.bc"</string>
    <string name="att">Attention!</string>
    <string name="textbaby">Install the Baby Care app today and get full functionality for free!</string>
    <string name="exps">Data saved successfully</string>
    <string name="imps">Data successfully recovered</string>
    <string name="backup">Backup to local</string>
    <string name="restore">Restore from local</string>
    <string name="admob_id">ca-app-pub-3477584791210665/7692778233</string>
    <string name="app_name">"I'm pregnant"</string>
    <string name="title_add">Add item</string>
    <string name="title_delete">Remove item?</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Remove</string>
    <string name="names">Baby names</string>
    <string name="kickcounter">Kick counter</string>
    <string name="trimest">Trimester</string>
    <string name="settings">Settings</string>
    <string name="Date">Date</string>
    <string name="StartTime">StartTime</string>
    <string name="Duration">Duration</string>
    <string name="Kicks">Kicks</string>
    <string name="description">Description</string>
    <string name="Other">Notes:</string>
    <string name="Weight">Weight</string>
    <string name="DueDate">Due Date</string>
    <string name="height">Height</string>
    <string name="ldm">LMC</string>
    <string name="bmi">The Body Mass Index is a useful way of establishing whether your weight is within a healthy range.</string>
    <string name="ybmi">Your BMI =</string>
    <string name="undrw">Underweight &lt; 18.5</string>
    <string name="normw">Normal weight 18.5-24.9</string>
    <string name="over">Overweight 25.0-29.9</string>
    <string name="obese">Obese >30</string>
    <string name="ratstr">If you liked the appendix, please, find time to estimate it. Your opinion is important for us. Thanks for support!</string>
    <string name="todo">To do list</string>
    <string name="kg">kg.</string>
    <string name="lb">lb.</string>
    <string name="cm">cm.</string>
    <string name="in">in.</string>
    <string name="month">month</string>
    <string name="feminap">Feminap/Woman Calendar - Pregnancy mode</string>
    <string name="Pregnancy">PREGNANCY</string>
    <string name="Weeks">WEEKS</string>
    <string name="Calendar">CALENDAR</string>
    <string name="ybaby">Your Baby</string>
    <string name="ybody">Your Body</string>
    <string name="boy">BOY NAMES</string>
    <string name="girl">GIRL NAMES</string>
    <string name="wek">week</string>
    <string name="wek2">weeks</string>
    <string name="weks">weeks</string>
    <string name="day">day</string>
    <string name="day2">days</string>
    <string name="days">days</string>
    <string name="pregw">Pregnancy Week:</string>
    <string name="appset">Application Settings</string>
    <string name="weiu">Weight Units</string>
    <string name="lenu">Length Units</string>
    <string name="prewei">Pre-Pregnancy Weight</string>
    <string name="startpr">First day of your last menstrual period</string>
    <string name="endpr">Pregnancy due date(estimated)</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_close">Close</string>
    <string name="Lists">List</string>
    <string name="dur">Duration:</string>
    <string name="listcounter">List counter</string>
    <string name="symp">Symptoms</string>
    <string name="note">Note</string>
    <string name="pill">Pills</string>
    <string name="docvisit">Doctor visit</string>
    <string name="hospbag">Hospital Bag</string>
    <string name="btn_remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="startT">Start time</string>
    <string name="dur2">Duration</string>
    <string name="kicks">Kicks</string>
    <string name="helpf">Helpful resources</string>
    <string name="report">Report</string>
    <string name="curW">Current Weight:</string>
    <string name="info">Info</string>
    <string name="mweek">My Week</string>
    <string name="mwei">My Weight</string>
    <string name="mrange">Normal Range</string>
    <string name="period">Period</string>
    <string name="dtogo">Days to go!</string>
    <string name="sun">sun</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="fdayofw">First day of the week</string>
    <string name="prebmi">Pre-pregnancy BMI:</string>
    <string name="w0d0">0 weeks 0 days</string>
    <string name="tri">Trimester</string>
    <string name="color">Color Scheme</string>
    <string name="wehe">Enter weight and height</string>
</resources>
