<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffececec" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <RelativeLayout android:orientation="horizontal" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?colorTitle">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/background_light" android:id="@id/title" android:padding="5.0dip" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/appset" android:layout_toRightOf="@id/previous" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/shadow" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <RadioGroup android:layout_gravity="center" android:orientation="vertical" android:id="@id/radioPreg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_weight="1.0">
                            <RadioButton android:textSize="14.0sp" android:textColor="@android:color/background_dark" android:id="@id/radiostart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/startpr" />
                            <RadioButton android:textSize="14.0sp" android:textColor="@android:color/background_dark" android:id="@id/radioend" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/endpr" />
                        </RadioGroup>
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <Button android:textColor="@android:color/background_dark" android:id="@id/setDat" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
                            <ImageButton android:textColor="@android:color/background_dark" android:id="@id/list" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_calendar" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
                            <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:layout_width="80.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/color" />
                            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                                <LinearLayout android:id="@id/c1" android:background="@android:color/background_light" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:layout_weight="1.0">
                                    <LinearLayout android:background="@color/c2_1" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                                </LinearLayout>
                                <LinearLayout android:id="@id/c2" android:background="@android:color/background_light" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:layout_weight="1.0">
                                    <LinearLayout android:background="@color/c1_1" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                                </LinearLayout>
                                <LinearLayout android:id="@id/c3" android:background="@android:color/background_light" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:layout_weight="1.0">
                                    <LinearLayout android:background="@color/c3_1" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                                </LinearLayout>
                                <LinearLayout android:id="@id/c4" android:background="@android:color/background_light" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:layout_weight="1.0">
                                    <LinearLayout android:background="@color/c4_1" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                                </LinearLayout>
                                <LinearLayout android:id="@id/c5" android:background="@android:color/background_light" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:layout_weight="1.0">
                                    <LinearLayout android:background="@color/c5_1" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/prewei" android:layout_weight="1.0" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                            <EditText android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:id="@id/setves" android:layout_width="wrap_content" android:layout_height="fill_parent" android:numeric="decimal" android:layout_weight="1.0" android:inputType="numberDecimal" />
                            <TextView android:textColor="@android:color/background_dark" android:gravity="center" android:id="@id/we" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/kg" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/height" android:layout_weight="1.0" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                            <EditText android:gravity="center_vertical" android:id="@id/sethei" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="decimal" android:layout_weight="1.0" android:inputType="numberDecimal" />
                            <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:id="@id/he" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cm" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/weiu" android:layout_weight="1.0" />
                        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/radioMetric" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_weight="1.0">
                            <RadioButton android:textColor="@android:color/background_dark" android:id="@id/radiokg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/kg" />
                            <RadioButton android:textColor="@android:color/background_dark" android:id="@id/radiolb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lb" />
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/lenu" android:layout_weight="1.0" />
                        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/radioMetric2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_weight="1.0">
                            <RadioButton android:textColor="@android:color/background_dark" android:id="@id/radiocm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/cm" />
                            <RadioButton android:textColor="@android:color/background_dark" android:id="@id/radioin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in" />
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@android:color/background_dark" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/fdayofw" android:layout_weight="1.0" />
                        <RadioGroup android:gravity="center_vertical" android:orientation="vertical" android:id="@id/radioWeek" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_weight="1.0">
                            <RadioButton android:textColor="@android:color/background_dark" android:id="@id/radiosun" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/sunday" />
                            <RadioButton android:textColor="@android:color/background_dark" android:id="@id/radiomon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/monday" />
                        </RadioGroup>
                    </LinearLayout>
                    <TextView android:textColor="@android:color/background_dark" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/path" android:layout_weight="1.0" />
                    <Button android:typeface="normal" android:id="@id/savesd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backup" />
                    <Button android:typeface="normal" android:id="@id/restoresd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/restore" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip">
            <Button android:typeface="normal" android:textColor="@color/white" android:id="@id/save" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/btn_ok" android:layout_weight="1.0" style="?colorTitle2" />
            <Button android:typeface="normal" android:textColor="@color/white" android:id="@id/cancel" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/btn_cancel" android:layout_weight="1.0" style="?colorTitle2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>