<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffececec" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?colorTitle">
        <LinearLayout android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/background_light" android:gravity="center_horizontal" android:id="@id/title" android:padding="5.0dip" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/listcounter" android:layout_toRightOf="@id/previous" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ffdcdcdc" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
        <TextView android:textSize="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/StartTime" android:lines="1" android:layout_weight="1.0" />
        <TextView android:textSize="15.0dip" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Duration" android:lines="1" android:layout_weight="1.0" />
        <TextView android:textSize="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Kicks" android:lines="1" android:layout_weight="1.0" />
    </LinearLayout>
    <ListView android:id="@id/listview" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>